# hc-chc-service

./: Cargo.toml  README.md  flake.nix
.github/workflows/: general.yaml  test.yaml
src/: chc.rs  cli.rs  error.rs  lib.rs  main.rs  msgpack_utils.rs
src/routes/: add_records.rs  get_record_data.rs  mod.rs  not_found.rs
tests/: integration.rs
